fix splitter z-index

--- a/less/table.less
+++ b/less/table.less
@@ -13,7 +13,7 @@
     height: 4px;
     margin-top: -4px;
     background-color: transparent;
-    z-index: 90;
+    z-index: 10;
     cursor: row-resize;
 }
 .result {
